# cmake-simple-project

./: CMakeLists.txt
src/: example.cpp
